[project]
name = "api-factory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.138.1",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "ty>=0.0.55",
    "uv>=0.11.25",
]
